added user active intent directly in service and updated service termination handling.